# django-jsonfeed

./: .coveragerc  .deepsource.toml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  pythonpackage.yml
design/: repository-open-graph-template.psd
docs/: Makefile  conf.py  index.rst  installation.rst  jsonfeed.rst  make.bat  modules.rst  usage.rst
jsonfeed/: __init__.py  core.py
tests/: test_django_jsonfeed.py  test_jsonfeed.py
