[tool.poetry]
name = "django-jsonfeed"
version = "0.4.0"
description = "JSONFeed syndication in Django."
authors = ["Myles Braithwaite <me@mylesbraithwaite.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/myles/django-jsonfeed"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: Pelican",
    "Programming Language :: Python",
]
packages = [{ include = "jsonfeed" }]
include = ["README.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
feedgenerator = "^2.0.0"
Django = "^4.0.6"
twine = "^4.0.1"
Sphinx = "^5.0.2"
pytest = "^7.1.2"
coverage = "^6.4.1"
mock = "^4.0.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
