[tool.poetry]
name = "django-jsonfeed"
version = "0.4.0"
description = "JSONFeed syndication in Django."
authors = ["Myles Braithwaite <me@mylesbraithwaite.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/myles/django-jsonfeed"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: Pelican",
    "Programming Language :: Python",
]
packages = [{ include = "jsonfeed" }]
include = ["README.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^6.4.1"
Django = ">=5,<6"
django-stubs = ">=5,<6"
feedgenerator = ">=2,<3"
isort = "^5.13.2"
mock = "^4.0.3"
mypy = "^1.15.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ruff = "^0.4.4"
Sphinx = "^5.0.2"
twine = "^4.0.1"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["feedgenerator.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
