[tool.poetry]
name = "django-jsonfeed"
version = "0.4.0"
description = "JSONFeed syndication in Django."
authors = ["Myles Braithwaite <me@mylesbraithwaite.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/myles/django-jsonfeed"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: Pelican",
    "Programming Language :: Python",
]
packages = [{ include = "jsonfeed" }]
include = ["README.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.6.12"
Django = ">=5,<6"
django-stubs = ">=5,<6"
feedgenerator = ">=2,<3"
isort = "^6.0.1"
mock = "^5.2.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.9.9"
Sphinx = "^8.2.3"
twine = "^6.1.0"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["feedgenerator.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
